--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,40 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+
+  <main>
+
+    
+
+    <div class="home">
+      <h1>
+        Color Palette Generator
+      </h1>
+    </div>
+
+    <div class="color-picker float"></div>
+
+    <header>
+
+      <button class="b-pick toAnalogous">Analogous</button>
+      <button class="b-pick toMonocro">Monochromatic</button>
+      <button class="b-pick toTetrad">
+        Tetrad
+      </button>
+      <button class="b-pick toSplit">
+        Split Complements
+      </button>
+    </header>
+
+
+    
+
+
+    <div class="color-container"></div>
+  </main>
   
 </body>
 </html>
